--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title: Sylvain Leclercq
 email: contact@sylvainleclercq.com
 description: >- # this means to ignore newlines until "baseurl:"
   A story of metaprogramming and strong typing
-baseurl: "/blog" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://sylvainleclercq.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: null
 github_username:  de-passage
