Change the name & add compiler version on article

--- a/_config.yml
+++ b/_config.yml
@@ -18,10 +18,10 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Sylvain Leclercq
+title: Sylvain's blog
 email: contact@sylvainleclercq.com
 description: >- # this means to ignore newlines until "baseurl:"
-  A story of metaprogramming and strong typing
+  Stories of metaprogramming and strong typing
 baseurl: "/blog" # the subpath of your site, e.g. /blog
 url: "http://sylvainleclercq.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: null
